--- a/src/pages/AboutUsSubPages/AboutUsSubPageSyles.css
+++ b/src/pages/AboutUsSubPages/AboutUsSubPageSyles.css
@@ -28,6 +28,9 @@
   display: flex;
   align-items: center;
 }
+.about-us-page-image {
+  max-height: 300px;
+}
 @media (max-width: 450px) {
   .about-us-page-container {
     margin: 80px 0;
